--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" #ingredientName>
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" class="form-control" id="amount">
+                    <input type="number" class="form-control" id="amount" #ingredientAmount>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success " type="submit" style="margin-right: 10px;">Add</button>
+                    <button class="btn btn-success " type="button" style="margin-right: 10px;" (click) ="addIngredient()">Add</button>
                     <button class="btn btn-danger" type="button" style="margin-right: 10px;">Delete</button>
                     <button class="btn btn-primary" type="button">Clear</button>
                 </div>
