--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,8 +12,8 @@
                 <li class="nav-item"><a href="#" (click) = "onSelect('shoppingList')">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                <li class="dropdown " appdropdown>
+                    <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
                         aria-expanded="false">
                         Manage <span class="caret"></span>
                     </a>
