still adding to shopping

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-md-5">
-        <app-recipes-list (recipeSelectedFired) = " showDetail( recipe = $event)"></app-recipes-list>
+        <app-recipes-list ></app-recipes-list>
     </div>
     <div class="col-md-7">
-        <app-recipes-detail *ngIf ="recipeShown ===true ; else nothingSelected" [recipeItem]="recipe" ></app-recipes-detail>  
+        <app-recipes-detail *ngIf ="recipeSelected ; else nothingSelected"  [recipe] = "recipeSelected"></app-recipes-detail>  
         <ng-template #nothingSelected>
             <h5>
                 Please select a recipe 
