--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" class="form-control" id="amount" #ingredientAmount>
+                    <input type="number" class="form-control" id="amount" min="0" #ingredientAmount>
                 </div>
             </div>
             <div class="row">
