--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -7,5 +7,5 @@
 <div class="row">
     <div class="col-xs-12">
         <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement"
-            (recipeItemSelected)="recipeSelected(recipeElement)"></app-recipe-item>
+            ></app-recipe-item>
     </div>
