--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,18 +8,18 @@
         </div>
         <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li class="nav-item"><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-                <li class="nav-item"><a href="#" (click) = "onSelect('shoppingList')">Shopping List</a></li>
+                <li class="nav-item" routerLinkActive="active"><a  routerLink="recipes" >Recipes</a></li>
+                <li class="nav-item" routerLinkActive="active"><a  routerLink="shoppingList" > Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown " appdropdown>
-                    <a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
+                    <a style= "cursor: pointer;"  class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
                         aria-expanded="false">
                         Manage <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Save data</a></li>
-                        <li><a href="#">Fetch data</a></li>
+                        <li><a style= "cursor: pointer;" >Save data</a></li>
+                        <li><a style= "cursor: pointer;" >Fetch data</a></li>
                     </ul>
                 </li>
             </ul>
