--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="max-height: 100px;">
+        <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="height: 200px; width: 300px;">
     </div>
 </div> 
 <div class="row">
@@ -15,9 +15,9 @@
                 Manage Recipe <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
-                <li><a href="#" (click) = "toShoppingList()">To Shopping List</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a style= "cursor: pointer;" (click) = "toShoppingList()">To Shopping List</a></li>
+                <li><a [routerLink]="['edit']"  style= "cursor: pointer;">Edit Recipe</a></li>
+                <li><a style= "cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
