--- a/src/app/recipes/recipes-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipes-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class = "list-group-item clearfix" (click) = "onSelect()">
+<a [routerLink]="['/recipes', recipe.id]" routerLinkActive="active" style= "cursor: pointer;"  class = "list-group-item clearfix"  >
     <div class="pull-left">
         <div class="list-group-item-heading">{{recipe.name}}</div>
         <p class="list-group-item-text">{{recipe.description}}</p>
@@ -7,7 +7,7 @@
         <img src="{{recipe.imagePath}}"
          alt="{{recipe.name}}"
           class="img-responsive" 
-          style="max-height: 50px;">
+          style="height: 50px; width: 80px;">
     </span>    
 </a>
 
