--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,11 +3,6 @@
         <app-recipes-list ></app-recipes-list>
     </div>
     <div class="col-md-7">
-        <app-recipes-detail *ngIf ="recipeSelected ; else nothingSelected"  [recipe] = "recipeSelected"></app-recipes-detail>  
-        <ng-template #nothingSelected>
-            <h5>
-                Please select a recipe 
-            </h5>
-        </ng-template>
+        <router-outlet></router-outlet>
     </div>
 </div>
