--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,19 +1,20 @@
 <div class="row">
     <div class="col-xs-12">
-        <form>
+        <form (ngSubmit)="addIngredient()" [formGroup]=" ingredientForm">
             <div class="row">
                 <div class="col-sm-5 form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" #ingredientName>
+                    <label for="name">name</label>
+                    <input type="name" id="name" class="form-control" formControlName="name">
                 </div>
                 <div class="col-sm-2 form-group">
                     <label for="amount">Amount</label>
-                    <input type="number" class="form-control" id="amount" min="0" #ingredientAmount>
+                    <input type="number" class="form-control" id="amount" min="0" formControlName="amount">
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success " type="button" style="margin-right: 10px;" (click) ="addIngredient()">Add</button>
+                    <button class="btn btn-success " type="submit" style="margin-right: 10px;">Add</button>
                     <button class="btn btn-danger" type="button" style="margin-right: 10px;">Delete</button>
                     <button class="btn btn-primary" type="button">Clear</button>
                 </div>
