--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -14,9 +14,9 @@
 
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success " type="submit" style="margin-right: 10px;">Add</button>
-                    <button class="btn btn-danger" type="button" style="margin-right: 10px;">Delete</button>
-                    <button class="btn btn-primary" type="button">Clear</button>
+                    <button class="btn btn-success " [disabled]="this.ingredientForm.invalid" type="submit" style="margin-right: 10px;"> {{ this.editMode ? "Update" : "Add"}}</button>
+                    <button *ngIf="this.editMode" class="btn btn-danger" type="button" style="margin-right: 10px;" [disabled] ="!this.editMode" (click) =deleteIngredient() >Delete</button>
+                    <button class="btn btn-primary" type="button" (click)="this.ingredientForm.reset(); this.editMode = false;" [disabled]="this.ingredientForm.pristine && !this.editMode">Clear</button>
                 </div>
             </div>
         </form>
