--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -32,14 +32,14 @@
           <div class="col-xs-10">
             <div class="form-group">
               <label for="imagePath">Image Path</label>
-              <input type="text" class="form-control" id="imagePath" formControlName="imagePath">
+              <input type="text" class="form-control" id="imagePath" formControlName="imagePath" #imagePath>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-xs-10 m-3">
             <div style="display: flex; justify-content: center; align-items: center;">
-              <img src="{{ this.RecipeEditForm.value.imagePath }}" style="max-height: 200px;" class="img-responsive">
+              <img src="{{ imagePath.value}}" style="max-height: 200px;" class="img-responsive">
             </div>
           </div>
         </div>
