--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,7 @@
                     <ul class="dropdown-menu">
                         <li><a style= "cursor: pointer;" >Save data</a></li>
                         <li><a style= "cursor: pointer;" >Fetch data</a></li>
+                        <li><a style= "cursor: pointer;" (click) = "logout()" >Logout</a></li>
                     </ul>
                 </li>
             </ul>
