--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,8 +18,8 @@
                         Manage <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a style= "cursor: pointer;" >Save data</a></li>
-                        <li><a style= "cursor: pointer;" >Fetch data</a></li>
+                        <li><a style= "cursor: pointer;" (click) ="saveData()">Save data</a></li>
+                        <li><a style= "cursor: pointer;" (click) ="fetchData()" >Fetch data</a></li>
                         <li><a style= "cursor: pointer;" (click) = "logout()" >Logout</a></li>
                     </ul>
                 </li>
