--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,29 +1,54 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
-                <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
-            </button>
-            <a routerLink="/" class="navbar-brand">Recipe Book</a>
-        </div>
-        <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
-            <ul class="nav navbar-nav">
-                <li class="nav-item" routerLinkActive="active"><a  routerLink="recipes" >Recipes</a></li>
-                <li class="nav-item" routerLinkActive="active"><a  routerLink="shoppingList" > Shopping List</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown " appdropdown>
-                    <a style= "cursor: pointer;"  class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true"
-                        aria-expanded="false">
-                        Manage <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a style= "cursor: pointer;" (click) ="saveData()">Save data</a></li>
-                        <li><a style= "cursor: pointer;" (click) ="fetchData()" >Fetch data</a></li>
-                        <li><a style= "cursor: pointer;" (click) = "logout()" >Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button
+        type="button"
+        class="navbar-toggle"
+        (click)="collapsed = !collapsed"
+      >
+        <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
+      </button>
+      <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
+    <div
+      class="navbar-collapse"
+      [class.collapse]="collapsed"
+      (window:resize)="collapsed = true"
+    >
+      <ul class="nav navbar-nav">
+        <li class="nav-item" routerLinkActive="active">
+          <a routerLink="recipes">Recipes</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a routerLink="shoppingList"> Shopping List</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a routerLink="login"> Authentication</a>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown" appdropdown>
+          <a
+            style="cursor: pointer"
+            class="dropdown-toggle"
+            data-toggle="dropdown"
+            role="button"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Manage <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a style="cursor: pointer" (click)="saveData()">Save data</a>
+            </li>
+            <li>
+              <a style="cursor: pointer" (click)="fetchData()">Fetch data</a>
+            </li>
+            <li><a style="cursor: pointer" (click)="logout()">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
