--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,18 +16,20 @@
       (window:resize)="collapsed = true"
     >
       <ul class="nav navbar-nav">
-        <li class="nav-item" routerLinkActive="active">
+        <li *ngIf = "isAuthenticated" class="nav-item" routerLinkActive="active">
           <a routerLink="recipes">Recipes</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a routerLink="shoppingList"> Shopping List</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li *ngIf = "!isAuthenticated" class="nav-item"  routerLinkActive="active">
           <a routerLink="login"> Authentication</a>
         </li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appdropdown>
+        <li *ngIf = "isAuthenticated"><a style="cursor: pointer" (click)="onLogout()">Logout</a></li>
+        <li *ngIf = "isAuthenticated" class="dropdown" appdropdown>
           <a
             style="cursor: pointer"
             class="dropdown-toggle"
@@ -45,7 +47,6 @@
             <li>
               <a style="cursor: pointer" (click)="fetchData()">Fetch data</a>
             </li>
-            <li><a style="cursor: pointer" (click)="logout()">Logout</a></li>
           </ul>
         </li>
       </ul>
