--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,55 +1,88 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <button
-        type="button"
-        class="navbar-toggle"
-        (click)="collapsed = !collapsed"
-      >
-        <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
-      </button>
-      <a routerLink="/" class="navbar-brand">Recipe Book</a>
-    </div>
+    <button
+      class="navbar-toggler"
+      type="button"
+      (click)="collapsed = !collapsed"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a routerLink="/" class="navbar-brand">Recipe Book</a>
     <div
-      class="navbar-collapse"
-      [class.collapse]="collapsed"
+      class="collapse navbar-collapse"
+      [class.show]="!collapsed"
       (window:resize)="collapsed = true"
     >
-      <ul class="nav navbar-nav">
-        <li *ngIf = "isAuthenticated" class="nav-item" routerLinkActive="active">
-          <a routerLink="recipes">Recipes</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a routerLink="shoppingList"> Shopping List</a>
-        </li>
-        <li *ngIf = "!isAuthenticated" class="nav-item"  routerLinkActive="active">
-          <a routerLink="login"> Authentication</a>
-        </li>
-        
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li *ngIf = "isAuthenticated"><a style="cursor: pointer" (click)="onLogout()">Logout</a></li>
-        <li *ngIf = "isAuthenticated" class="dropdown" appdropdown>
-          <a
-            style="cursor: pointer"
-            class="dropdown-toggle"
-            data-toggle="dropdown"
-            role="button"
-            aria-haspopup="true"
-            aria-expanded="false"
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li *ngIf="isAuthenticated" class="nav-item">
+          <a class="nav-link" routerLink="recipes" routerLinkActive="active"
+            >Recipes</a
           >
-            Manage <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li>
-              <a style="cursor: pointer" (click)="saveData()">Save data</a>
-            </li>
-            <li>
-              <a style="cursor: pointer" (click)="fetchData()">Fetch data</a>
-            </li>
-          </ul>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLink="shoppingList"
+            routerLinkActive="active"
+            >Shopping List</a
+          >
+        </li>
+        <li *ngIf="!isAuthenticated" class="nav-item">
+          <a class="nav-link" routerLink="login" routerLinkActive="active"
+            >Authentication</a
+          >
         </li>
       </ul>
+      <div class="d-inline-block">
+        <ul class="navbar-nav">
+          <li *ngIf="isAuthenticated" class="nav-item dropdown">
+            <div class="btn-group" dropdown>
+              <a
+                id="button-basic"
+                dropdownToggle
+                style="cursor: pointer"
+                class="dropdown-toggle nav-link"
+                aria-controls="dropdown-basic"
+              >
+                Manage
+              </a>
+              <ul
+                id="dropdown-basic"
+                *dropdownMenu
+                class="dropdown-menu"
+                role="menu"
+                aria-labelledby="button-basic"
+              >
+                <li role="menuitem">
+                  <a
+                    class="dropdown-item"
+                    style="cursor: pointer"
+                    (click)="fetchData()"
+                    >Fetch Data</a
+                  >
+                </li>
+                <li role="menuitem">
+                  <a
+                    class="dropdown-item"
+                    style="cursor: pointer"
+                    (click)="saveData()"
+                    >Save data</a
+                  >
+                </li>
+                <li class="dropdown-divider"></li>
+                <li role="menuitem">
+                  <a
+                    class="dropdown-item"
+                    style="cursor: pointer"
+                    (click)="onLogout()"
+                    >Logout</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
