--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,11 +1,21 @@
 <div class="row">
-    <div class="col-xs-12">
-        <button [routerLink]="['/recipes','new']"  class="btn btn-success">New Recipe</button>
-    </div>
+  <div class="col-xs-12">
+    <button [routerLink]="['/recipes', 'new']" class="btn btn-success">
+      New Recipe
+    </button>
+  </div>
 </div>
-<hr>
+<hr />
 <div class="row">
-    <div class="col-xs-12">
-        <app-recipe-item *ngFor="let recipeElement of recipes; let i = index" [recipe]="recipeElement"
-            ></app-recipe-item>
-    </div>
+  <div class="col-xs-12">
+    <app-recipe-item
+      *ngFor="let recipeElement of recipes; let i = index"
+      [recipe]="recipeElement"
+    ></app-recipe-item>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-4">
+    <app-ad-banner [ads]="recipesAdsItems"></app-ad-banner>
+  </div>
+</div>
