--- a/src/app/recipes/recipe-start/recipe-start.component.html
+++ b/src/app/recipes/recipe-start/recipe-start.component.html
@@ -1,1 +1,14 @@
-<h3 class = "text-center">Please select a recipe</h3>
+<div class="container p-5">
+    <div class="p-5">
+       <div class="p-3">
+        <hr>
+        <hr>
+        <hr>
+        <h3 class = "text-center">Select A recipe</h3>
+        <hr>
+        <hr>
+        <hr> 
+       </div>
+    </div>
+    
+</div>
