--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,19 +1,22 @@
 <div class="container mt-4">
-  <div class="row">
-    <div class="col-xs-10">
-      <h2>{{ editMode ? 'Edit Recipe' : 'Create New Recipe' }}</h2>
+  <div class="row justify-content-center">
+    <div class="col-lg-10">
+      
       <form (ngSubmit)="onSubmit()" [formGroup]="RecipeEditForm">
-        <div class="row">
-          <div class="col-xs-3">
-            <button type="submit" class="btn btn-success" [disabled]="RecipeEditForm.invalid">{{ editMode ? 'Save' :
-              'Create' }}</button>
+        <div class="row d-flex justify-content-between align-items-center">
+          <div class="col-md-5">
+            <h2>{{ editMode ? 'Edit Recipe' : 'Create New Recipe' }}</h2>
           </div>
-          <div class="col-xs-4">
-            <button type="button" class="btn btn-secondary " (click)="cancelEdit()">Cancel</button>
+          <div class="col-md-5">
+            <button type="submit" class="btn btn-success mx-3" [disabled]="RecipeEditForm.invalid">{{ editMode ? 'Save' : 'Create' }}</button>
+            <button type="button" class="btn btn-secondary mx-3" (click)="cancelEdit()">Cancel</button>
+           
           </div>
+          
+          
         </div>
         <div class="row">
-          <div class="col-xs-10">
+          <div class="col-lg-12 my-1">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" class="form-control" id="name" formControlName="name">
@@ -21,7 +24,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-10">
+          <div class="col-lg-12 my-1">
             <div class="form-group">
               <label for="description">Description</label>
               <textarea class="form-control" id="description" rows="4" formControlName="description"></textarea>
@@ -29,24 +32,23 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-10">
+          <div class="col-lg-12 my-1">
             <div class="form-group">
               <label for="imagePath">Image Path</label>
               <input type="text" class="form-control" id="imagePath" formControlName="imagePath" #imagePath>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-xs-10 m-3">
+        <div class="row justify-content-center">
+          <div class="col-lg-12 m-3">
             <div style="display: flex; justify-content: center; align-items: center;">
-              <img src="{{ imagePath.value}}" style="max-height: 200px;" class="img-responsive">
+              <img src="{{ imagePath.value }}" style="max-height: 200px;" class="img-fluid">
             </div>
           </div>
         </div>
         <hr>
         <div class="row" formArrayName="ingredientsArray">
-
-          <div class="col-xs-10 m-3" *ngFor="let ingredient of ingredientsArray.controls; let i=index">
+          <div class="col-lg-12 my-3" *ngFor="let ingredient of ingredientsArray.controls; let i=index">
             <div class="row" [formGroupName]="i">
               <div class="col-sm-8">
                 <div class="form-group">
@@ -54,28 +56,24 @@
                   <input type="text" id="name" class="form-control" formControlName="name">
                 </div>
               </div>
-              <div class="col-sm-2">
+              <div class="col-sm-3">
                 <div class="form-group">
                   <label for="amount">Amount</label>
                   <input type="number" class="form-control" id="amount" min="0" formControlName="amount">
                 </div>
               </div>
-              <div class="col-sm-2 align-middle"  style=" vertical-align: bottom !important">
+              <div class="col-sm-1 d-flex align-items-end">
                 <div class="form-group">
                   <button type="button" class="btn btn-danger" (click)="deleteIngredient(i)">Delete</button>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="col-xs-3">
+        <div class="row justify-content-center">
+          <div class="col-md-5">
             <button type="button" class="btn btn-primary" (click)="addIngredient()">Add Ingredient</button>
           </div>
-
-
         </div>
       </form>
     </div>
