--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -1,39 +1,43 @@
-<div class="row">
-    <div class="col-xs-12">
-        <img src="{{recipe.imagePath}}" alt="" class="img-responsive" style="height: 200px; width: 300px;">
+<div class="container py-4 ">
+    <div class="row ">
+      <div class="col-12 d-flex justify-content-center">
+        <img [src]="recipe.imagePath" alt="" class="img-fluid" style="height: 200px; width: 300px;">
+      </div>
     </div>
-</div> 
-<div class="row">
-    <div class="col-xs-12">
-        <h1>{{recipe.name}}</h1>
+    <div class="row">
+      <div class="col-12 d-flex justify-content-center">
+        <h3>{{ recipe.name }}</h3>
+      </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <div class="btn-group  "appdropdown>
-            <button type="button" class="btn btn-primary dropdown-toggle">
-                Manage Recipe <span class="caret"></span>
+    <div class="row">
+      <div class="col-12 d-flex justify-content-center">
+        <div class="btn-group" dropdown>
+            <button id="button-basic" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
+                    aria-controls="dropdown-basic">
+             Manage Recipe <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu">
-                <li><a style= "cursor: pointer;" (click) = "toShoppingList()">To Shopping List</a></li>
-                <li><a [routerLink]="['edit']"  style= "cursor: pointer;">Edit Recipe</a></li>
-                <li><a style= "cursor: pointer;" (click)="deleteRecipe()">Delete Recipe</a></li>
+            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+                role="menu" aria-labelledby="button-basic">
+                <li role="menuitem"><a class="dropdown-item" style="cursor: pointer;" (click)="toShoppingList()">To Shopping List</a></li>
+                <li role="menuitem"><a class="dropdown-item"style="cursor: pointer;" [routerLink]="['edit']">Edit Recipe</a></li>
+              <li role="menuitem"><a class="dropdown-item" style="cursor: pointer;" (click)="deleteRecipe()">Delete Recipe</a></li>
             </ul>
-        </div>
+          </div>
+      </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-       {{recipe.description}}
+    <div class="row p-2">
+      <div class="col-12 d-flex justify-content-center">
+        {{ recipe.description }}
+      </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <ul class="list-group"> 
-            <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
-                {{ingredient.name}} ({{ingredient.amount}})
-            </li> 
-
+    <div class="row">
+      <div class="col-12">
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+            {{ ingredient.name }} ({{ ingredient.amount }})
+          </li>
         </ul>
+      </div>
     </div>
-</div>
+  </div>
+  
