--- a/src/app/recipes/recipes-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipes-list/recipe-item/recipe-item.component.html
@@ -1,13 +1,22 @@
-<a (click) ="goToRecipe(recipe)" routerLinkActive="active" style= "cursor: pointer;"  class = "list-group-item clearfix"  >
-    <div class="pull-left">
-        <div class="list-group-item-heading">{{recipe.name}}</div>
-        <p class="list-group-item-text">{{recipe.description}}</p>
+<a
+  (click)="goToRecipe(recipe)"
+  [routerLinkActive]="'active'"
+  style="cursor: pointer"
+  class="list-group-item clearfix"
+>
+  <div class="d-flex justify-content-between align-items-center">
+    <div>
+      <h5 class="list-group-item-heading">{{ recipe.name }}</h5>
+      <p class="list-group-item-text">{{ recipe.description }}</p>
     </div>
-    <span class="pull-right">
-        <img src="{{recipe.imagePath}}"
-         alt="{{recipe.name}}"
-          class="img-responsive" 
-          style="height: 50px; width: 80px;">
-    </span>    
+    <div>
+      <img
+        [src]="recipe.imagePath"
+        [alt]="recipe.name"
+        class="img-fluid"
+        style="height: 50px; width: 80px"
+      />
+    </div>
+  </div>
 </a>
-
+<hr>
