--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -1,21 +1,23 @@
-<div class="row">
-  <div class="col-xs-12">
-    <button [routerLink]="['/recipes', 'new']" class="btn btn-success">
-      New Recipe
-    </button>
+<div class="container">
+  <div class="row m-3 justify-content-between">
+    <div class="col-3 d-flex align-items-center" >
+      <a [routerLink]="['/recipes', 'new']" class="btn btn-success">
+        New Recipe
+      </a>
+    </div>
+    <div class="col-9 ">
+      <app-ad-banner [ads]="recipesAdsItems"></app-ad-banner>
+    </div>
   </div>
-</div>
-<hr />
-<div class="row">
-  <div class="col-xs-12">
-    <app-recipe-item
-      *ngFor="let recipeElement of recipes; let i = index"
-      [recipe]="recipeElement"
-    ></app-recipe-item>
+  <hr />
+
+  <div class="row d-flex justify-content-center">
+    
+    <div class="col-10 mx-3 ">
+      <app-recipe-item
+        *ngFor="let recipeElement of recipes; let i = index"
+        [recipe]="recipeElement"
+      ></app-recipe-item>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-4">
-    <app-ad-banner [ads]="recipesAdsItems"></app-ad-banner>
-  </div>
-</div>
+  
