--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,24 +1,23 @@
 <div class="container mt-4">
-    <div class="row">
-      <div class="col-xs-12">
-        <form (ngSubmit)="addIngredient()" [formGroup]="ingredientForm">
-          <div class="form-row">
-            <div class="col-md-5 form-group">
-              <label for="name">Name</label>
-              <input type="text" id="name" class="form-control" formControlName="name">
-            </div>
-            <div class="col-md-2 form-group">
-              <label for="amount">Amount</label>
-              <input type="number" class="form-control" id="amount" min="0" formControlName="amount">
-            </div>
-            <div class="col-md-12 form-group">
-              <button class="btn btn-success" [disabled]="ingredientForm.invalid" type="submit">{{ editMode ? 'Update' : 'Add' }}</button>
-              <button *ngIf="editMode" class="btn btn-danger ml-2" type="button" [disabled]="!editMode" (click)="deleteIngredient()">Delete</button>
-              <button class="btn btn-primary ml-2" type="button" (click)="ingredientForm.reset(); editMode = false" [disabled]="ingredientForm.pristine && !editMode">Clear</button>
-            </div>
+  <div class="row">
+    <div class="col-8">
+      <form (ngSubmit)="addIngredient()" [formGroup]="ingredientForm">
+        <div class="row">
+          <div class="col-md-5 form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control" formControlName="name">
           </div>
-        </form>
-      </div>
+          <div class="col-md-3 form-group">
+            <label for="amount">Amount</label>
+            <input type="number" class="form-control" id="amount" min="0" formControlName="amount">
+          </div>
+          <div class="col-md-8 form-group mt-3">
+            <button class="btn btn-success" [disabled]="ingredientForm.invalid" type="submit">{{ editMode ? 'Update' : 'Add' }}</button>
+            <button *ngIf="editMode" class="btn btn-danger ms-2" type="button" [disabled]="!editMode" (click)="deleteIngredient()">Delete</button>
+            <button class="btn btn-primary ms-2" type="button" (click)="ingredientForm.reset(); editMode = false" [disabled]="ingredientForm.pristine && !editMode">Clear</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-  
+</div>
