--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,13 +1,18 @@
-<div class="row">
-    <div class="col-xs-8">
-        <app-shopping-edit></app-shopping-edit>
-        <hr>
-        <ul class="list-group">
-            <a class="list-group-item" style="cursor: pointer;"
-            *ngFor="let ingredient of ingredients; let i = index"
-            (click) = onEditIngredient(i)>
-                {{ingredient.name}} ({{ingredient.amount}})
-            </a>
-        </ul>
+<div class="container p-3">
+  <div class="row d-flex justify-content-center">
+    <div class="col-8">
+      <app-shopping-edit></app-shopping-edit>
+      <hr />
+      <ul class="list-group">
+        <a
+          class="list-group-item"
+          style="cursor: pointer"
+          *ngFor="let ingredient of ingredients; let i = index"
+          (click)="onEditIngredient(i)"
+        >
+          {{ ingredient.name }} ({{ ingredient.amount }})
+        </a>
+      </ul>
     </div>
+  </div>
 </div>
