still recipes and auto logi and aut logout

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -73,6 +73,7 @@
                 <li role="menuitem">
                   <a
                     class="dropdown-item"
+                    type = "button"
                     style="cursor: pointer"
                     (click)="onLogout()"
                     >Logout</a
